--- a/Project_Ocean.html
+++ b/Project_Ocean.html
@@ -52,7 +52,7 @@
     <main>
         <div class="First">
             <div class="Title">
-                Ocean Habitate
+                Ocean Habitat
             </div>
             <div class="page">
                 <div class="svg-wrap">
@@ -134,7 +134,7 @@
                     Artist Statement
                 </h1>
                 <p>
-                    Myartistic pursuit is driven by a deep desire to illuminate the plight
+                    My artistic pursuit is driven by a deep desire to illuminate the plight
                     of sea creatures and the ecological damage wroughtbyhuman
                     activity. Through a series of interactive pieces, I aim to engage
                     viewers in a visceral exploration of these themes, weaving together
