--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
             </div>
 
-            <div class="container1">
+            <div class="container1" id="interactive_design">
                 <div class="card card--1">
                     <div class="card__front">
                         <div class="card__img"><img src="img/DigitalInteraction/poster.jpg" alt="Loading Poster" />
@@ -147,7 +147,7 @@
                 </div>
             </div>
 
-            <div class="container2">
+            <div class="container2" id="3D">
                 <div class="card card--2">
                     <div class="card__front">
                         <div class="card__img"><img src="img/3D/poster.png" alt="Loading Poster" />
@@ -169,7 +169,7 @@
 
 
 
-            <div class="container3">
+            <div class="container3" id="Ocean">
                 <div class="card card--3">
                     <div class="card__front">
                         <div class="card__img"><img src="https://imgur.com/30zFLzd.gif" alt="Loading Poster" />
@@ -189,7 +189,7 @@
 
 
 
-            <div class="container4">
+            <div class="container4" id="Chang">
                 <div class="card card--4">
                     <div class="card__front">
                         <div class="card__img"><img src="https://imgur.com/WUYEsXp.jpg" alt="Loading Poster" />
@@ -212,7 +212,7 @@
 
 
 
-            <div class="container5">
+            <div class="container5" id="Discursive">
                 <div class="card card--5">
                     <div class="card__front">
                         <div class="card__img"><img src="https://imgur.com/zeMdi2D.jpg" alt="Loading Poster" />
@@ -234,7 +234,7 @@
             </div>
 
 
-            <div class="container6">
+            <div class="container6" id="HXZ">
                 <div class="card card--6">
                     <div class="card__front">
                         <div class="card__img"><img src="https://imgur.com/FU3cIKP.jpg" alt="Loading Poster" />
@@ -254,7 +254,7 @@
 
 
 
-            <div class="container7">
+            <div class="container7" id="Nanjing">
                 <div class="card card--7">
                     <div class="card__front">
                         <div class="card__img"><img src="https://imgur.com/wgzgevU.jpg" alt="Loading Poster" />
@@ -274,7 +274,7 @@
 
 
 
-            <div class="container8">
+            <div class="container8" id="D">
                 <div class="card card--8">
                     <div class="card__front">
                         <div class="card__img"><img src="img/Anxiety/poster.png" alt="Loading Poster" />
